# oa3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  gui.ini  imgui.ini  run.sh
oa3D/assets/crystal_maiden/: crystal_maiden_econ.fbx
oa3D/assets/cybertruck/: cyber.dae
oa3D/assets/handgun/: Handgun_Packed.dae  Handgun_Packed.fbx  Handgun_fbx_7.4_binary.fbx  handgun.dae  handgun_3ds_remake.blend  handgun_3ds_remake.dae  handgun_3ds_remake.fbx  handgun_3ds_remake.mtl  handgun_3ds_remake.stl
oa3D/assets/lamp/: 3D_sconce_03_only.blend  3D_sconce_03_scene.blend  sconce_03.mtl
oa3D/assets/spacestation/: spacestationscene.mtl
oa3D/headers/: AnimatedModel.h  BoneMatrix.h  Camera.h  Editor.h  GLFW_backend.h  GUILoader.h  IFileSaveCallback.h  IGUICallback.h  IRenderer.h  IShaderCallback.h  Image.h  IndexBuffer.h  Math_util.h  Mesh.h  Model.h  OA3D.h  OldCamera.h  RenderBatch.h  RendererGL.h  Shader.h  ShaderManager.h  SkinningShader.h  Texture.h  Transformation.h  Vertex.h  VertexArray.h  VertexBoneData.h  VertexBuffer.h  VertexBufferLayout.h  texture.h
oa3D/shaders/: cubemap_frag.glsl  cubemap_vert.glsl  instanced_model_frag.glsl  instanced_model_vert.glsl  model_load_frag.glsl  model_load_vert.glsl  model_loading_fragment.glsl  model_loading_vertex.glsl  plane_frag.glsl  plane_vert.glsl  projection_frag.glsl  projection_vert.glsl  scene_frag.glsl  scene_vert.glsl  simple_light_vert.glsl  skinning_frag.glsl  skinning_vert.glsl  skybox_frag.glsl  skybox_vert.glsl  std_frag.glsl  std_vert.glsl  test.vert  texture_frag.glsl  texture_vert.glsl  trees.glsl  water.glsl
oa3D/src/: App.cpp  GLFW_backend.cpp  GUILoader.cpp  Image.cpp  Mesh.cpp  RenderBatch.cpp  Shader.cpp  ShaderSet.cpp  ShaderSet.h
oa3D/src/buffers/: IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp
oa3D/src/entities/: Entity.h  GridPlane.h  Line.h  Plane.h  Quad.h  Skybox.h  Triangle.h
oa3D/src/renderer/: RendererGL.cpp
oa3D/src/tests/: CamTex  CamTex.cpp  Makefile  Mesh.src  ObjRender.cpp  app.src  test.cpp
